--- a/automating-your-work-away.Rmd
+++ b/automating-your-work-away.Rmd
@@ -19,43 +19,91 @@ RMarkdown. Our presentation discusses why we made the change, how we managed it,
 and advice for other consulting firms looking to do the same.
 -->
 
+```{r, include=FALSE}
+library(png)
+library(grid)
+library(ggplot2)
+library(ggthemes)
+library(scales)
+
+knitr::opts_chunk$set(tidy = FALSE, cache.extra = packageVersion('tufte'))
+options(htmltools.dir.version = FALSE)
+knitr::opts_chunk$set(message = FALSE)
+knitr::opts_chunk$set(warning = FALSE)
+knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(comment = FALSE)
+knitr::opts_chunk$set(error = FALSE)
+knitr::opts_chunk$set(fig.align = "center")
+
+darkhorse_theme = function() {
+  theme_bw() + theme(plot.background = element_rect(fill="transparent",
+colour = NA),
+panel.background = element_rect(fill = "transparent", colour = NA),
+panel.grid.major = element_blank(),
+panel.grid.minor = element_blank(),
+panel.border = element_blank(),
+legend.position="none",
+axis.line.x = element_line(color = "black"),
+axis.line.y = element_line(color = "black"),
+axis.title.x=element_text(vjust=0.1),
+plot.margin=unit(c(12.5, 1, 12.5, 1), "mm"))
+#text=element_text(family="Open Sans"))
+}
+```
+
 ## Outline
 ### 1. About Darkhorse
 ### 2. Problems we faced
 ### 3. How we solved those problems
-### 4. How you can solve your problems (every single one!)
+### 4. How you can improve R(Markdown) adoption
 
 ---
 
-![](assets/darkhorse_logo.png)
+```{r fig.width=7.5, fig.height=5}
+grid.raster(readPNG("assets/darkhorse_logo.png"))
+```
 
 ---
 
-![](assets/histogram_1.png)
+```{r fig.width=7.5, fig.height=5}
+grid.raster(readPNG("assets/histogram_1.png"))
+```
 
 ---
 
-![](assets/histogram_2.png)
+```{r fig.width=7.5, fig.height=5}
+grid.raster(readPNG("assets/histogram_2.png"))
+```
 
 ---
 
-![](assets/histogram_3.png)
+```{r fig.width=7.5, fig.height=5}
+grid.raster(readPNG("assets/histogram_3.png"))
+```
 
 ---
 
-![](assets/histogram_4.png)
+```{r fig.width=7.5, fig.height=5}
+grid.raster(readPNG("assets/histogram_4.png"))
+```
 
 ---
 
-![](assets/line_chart_1.png)
+```{r fig.width=7.5, fig.height=5}
+grid.raster(readPNG("assets/line_chart_1.png"))
+```
 
 ---
 
-![](assets/line_chart_2.png)
+```{r fig.width=7.5, fig.height=5}
+grid.raster(readPNG("assets/line_chart_2.png"))
+```
 
 ---
 
-![](assets/line_chart_3.png)
+```{r fig.width=7.5, fig.height=5}
+grid.raster(readPNG("assets/line_chart_3.png"))
+```
 
 ## Problems
 
@@ -75,95 +123,98 @@ and advice for other consulting firms looking to do the same.
 
 ## R:
 ```
-function darkhorse_histogram(x_data) {
-    ggplot(test_data, aes(Region)) +
+function darkhorse_histogram(x_data, x_var, x_breaks, title, 
+                             y_breaks, col="#E69F00") {
+    ggplot(x_data, aes(x_var)) +
         geom_bar(fill=col, aes(y=(..count..)/sum(..count..))) +
         geom_hline(yintercept= 0, colour=col) +
         darkhorse_theme() +
-        ylab("Percentage of respondents") + ggtitle("Regional distribution") +
+        ggtitle(title) +
         theme(axis.line.x = element_blank(),
             axis.line.y = element_blank(),
             axis.ticks = element_blank()) +
-        scale_y_continuous(breaks=y_breaks, labels = percent) +
+        scale_y_continuous(breaks=y_breaks, labels=percent) +
+        ylab("") + 
         geom_hline(yintercept=y_breaks[2:length(y_breaks)], color="white") +
-        scale_x_continuous(breaks=1:6)
+        scale_x_continuous(breaks=x_breaks)
 }
 ```
 
 ## Best practice charts
 
-```{r, include=FALSE}
-library(ggplot2)
-library(ggthemes)
-
-knitr::opts_chunk$set(tidy = FALSE, cache.extra = packageVersion('tufte'))
-options(htmltools.dir.version = FALSE)
-knitr::opts_chunk$set(message = FALSE)
-knitr::opts_chunk$set(warning = FALSE)
-knitr::opts_chunk$set(echo = FALSE)
-knitr::opts_chunk$set(comment = FALSE)
-knitr::opts_chunk$set(error = FALSE)
-
-darkhorse_theme = function() {
-  theme_bw() + theme(plot.background = element_rect(fill="transparent",
-colour = NA),
-panel.background = element_rect(fill = "transparent", colour = NA),
-panel.grid.major = element_blank(),
-panel.grid.minor = element_blank(),
-panel.border = element_blank(),
-legend.position="none",
-axis.line.x = element_line(color = "black"),
-axis.line.y = element_line(color = "black"),
-axis.title.x=element_text(vjust=0.1),
-plot.margin=unit(c(12.5, 1, 12.5, 1), "mm"),
-text=element_text(family="Open Sans"))
+```{r}
+darkhorse_histogram = function(x_data, x_var, x_breaks, title, 
+                             y_breaks, col="#E69F00") {
+    ggplot(x_data, aes_string(x_var)) +
+        geom_bar(fill=col, aes(y=(..count..)/sum(..count..))) +
+        geom_hline(yintercept= 0, colour=col) +
+        darkhorse_theme() +
+        ggtitle(title) +
+        theme(axis.line.x = element_blank(),
+            axis.line.y = element_blank(),
+            axis.ticks = element_blank()) +
+        ylab("") + 
+        scale_y_continuous(breaks=y_breaks, labels=percent) +
+        geom_hline(yintercept=y_breaks[2:length(y_breaks)], color="white") +
+        scale_x_continuous(breaks=x_breaks)
 }
-```
 
-```{r, fig.height=5, fig.width=9}
-require(scales)
+darkhorse_highlighted_linechart = function(line_data, x_var, y_var, 
+                                           y_label, title, x_breaks, x_labels) { 
+    ggplot(line_data, aes_string(x = x_var, y = y_var)) +
+        geom_line(aes(colour = Colour, group = Group)) + 
+        darkhorse_theme() +
+        ylab(y_label) + ggtitle(title) +
+        theme(axis.line.x = element_blank(),
+              axis.line.y = element_blank(),
+              axis.ticks = element_blank()) +
+        scale_x_continuous(breaks=x_breaks, labels=x_labels)
+}
+
 y_breaks=seq(0, 0.30, by=0.05)
 test_data = data.frame(1:100)
-test_data$Region = c(rep.int(1, 25), rep.int(2, 15), rep.int(3, 10), rep.int(4, 25), rep.int(5, 20), rep.int(6, 5))
-col = "#E69F00"
-ggplot(test_data, aes(Region)) +
-    geom_bar(fill=col, aes(y=(..count..)/sum(..count..))) +
-    geom_hline(yintercept= 0, colour=col) +
-    darkhorse_theme() +
-    ylab("Percentage of respondents") + ggtitle("Regional distribution") +
-    theme(axis.line.x = element_blank(),
-        axis.line.y = element_blank(),
-        axis.ticks = element_blank()) +
-    scale_y_continuous(breaks=y_breaks, labels = percent) +
-    geom_hline(yintercept=y_breaks[2:length(y_breaks)], color="white") +
-    scale_x_continuous(breaks=1:6)
+test_data$Region = c(rep.int(1, 25), 
+                     rep.int(2, 15), 
+                     rep.int(3, 10), 
+                     rep.int(4, 25), 
+                     rep.int(5, 20), 
+                     rep.int(6, 5))
+```
+```{r fig.height=5, fig.width=9}
+darkhorse_histogram(test_data, "Region", 
+    x_breaks=1:6, 
+    title="Regional distribution", 
+    y_breaks=y_breaks, 
+    col="#E69F00") 
 ```
 
 ## Best practice charts
 
 ```{r, fig.height=5, fig.width=9}
 line_data = data.frame(
-    var0 = 1100 + c(0, cumsum(runif(49, -20, 20))),
-    var1 = 1150 + c(0, cumsum(runif(49, -10, 10))),
-    var2 = 1200 + c(0, cumsum(runif(49, -30, 10))),
-    var3 = 1250 + c(0, cumsum(runif(49, -40, 10))),
-    Month = 1:50
+    Sales =  c(1100 + c(0, cumsum(runif(49, -20, 20))),
+               1150 + c(0, cumsum(runif(49, -10, 10))),
+               1200 + c(0, cumsum(runif(49, -30, 10))),
+               1250 + c(0, cumsum(runif(49, -40, 10)))),
+    Group = c(rep("1", 50), 
+              rep("2", 50), 
+              rep("3", 50), 
+              rep("4", 50)),
+    Month = rep(1:50, 4), 
+    Colour = rep("grey", 200), stringsAsFactors=FALSE
 )
+line_data[line_data$Group == "3",]$Colour = "red"
 months = seq(1, 360, 30)
-intermediary_month_labels = as.Date(months, origin="2015/01/01", by="months", format="%M")
+intermediary_month_labels = as.Date(months, origin="2015/01/01", by="months", 
+                                    format="%M")
 month_labels = format(intermediary_month_labels, format="%b")
-col = "#E69F00"
-ggplot(line_data, aes(Month)) +
-    geom_line(aes(y=var0, colour='gray')) +
-    geom_line(aes(y=var1, colour='gray')) +
-    geom_line(aes(y=var3, colour='gray')) +
-    geom_line(aes(y=var2, colour=col)) +
-    darkhorse_theme() +
-    ylab("Sales ($)") + ggtitle("") +
-    theme(axis.line.x = element_blank(),
-        axis.line.y = element_blank(),
-        axis.ticks = element_blank()) +
-    scale_x_continuous(breaks=seq(1, 48, 4), labels=month_labels)
+darkhorse_highlighted_linechart(line_data = line_data, 
+    x_var = "Month", 
+    y_var = "Sales", 
+    y_label = "Sales ($)", 
+    title = "", 
+    x_breaks = seq(1, 48, 4), 
+    x_labels = month_labels)
 ```
 
 ## What we did:
@@ -184,6 +235,14 @@ ggplot(line_data, aes(Month)) +
 ## What we did:
 1. Use RMarkdown to write template ("best practice") slides.
 2. Made the slides accessible to the company (we used Git + Bitbucket).
+3. Made it easy to run in other environments (we used installation scripts &
+   Docker)
+4. Iterate (we used Git).
+
+## What we did:
+1. Use RMarkdown to write template ("best practice") slides.
+2. Made the slides accessible to the company (we used Git + Bitbucket; 
+we plan to publish a package soon).
 3. Made it easy to run in other environments (we used installation scripts &
    Docker)
 4. Iterate (we used Git).
