--- a/header.tex
+++ b/header.tex
@@ -31,6 +31,8 @@
 %% You also use hyperref, and pick colors
 \hypersetup{colorlinks,citecolor=blue,filecolor=blue,linkcolor=blue,urlcolor=blue}
 
+\titlegraphic{\hfill\includegraphics[height=1cm]{./assets/darkhorse_logo.png}}
+
 %% when rendered with rmarkdown, somehow the unicode char for the dot
 %% disappears so we redefine it here
 %\renewcommand{\textbullet}{$\cdot
