--- a/docker-demo.Rmd
+++ b/docker-demo.Rmd
@@ -25,24 +25,9 @@ classoption: compress
 ![](assets/excel-speed-parameters.png)
 
 ## One: Moving a nonlinear regression from Excel to Python.
-At Darkhorse, we had a nonlinear regression that we had been running for
-several years. We used Excel to calculate the parameters of the model, which
-we would then input into our emergency services application.
-
-Problems:
-
-1. It was slow.
-2. Hard to automate.
-3. Hard to test.
-
-
-## One: Moving a nonlinear regression from Excel to Python.
 The solution:
 
 ![](assets/numpy-scipy.png)
-
-## One: Moving a nonlinear regression from Excel to Python.
-120 lines of code later, I was done. 10000x speedup.
 
 # But...
 
@@ -52,27 +37,12 @@ The solution:
 
 # Fiddle with the computer for 20 minutes.
 
-
-
 ## Two: Sharing exploratory models
 
 ![](assets/tensorflow.png)
 
-## Two: Sharing exploratory models
-As a side project at Darkhorse, one of the other analysts and I have been
-working on a project that tries to predict the longterm price of oil using a
-neural net.
-
-We've been using Tensorflow to run the model.
 
 ## Two: Sharing exploratory models
-I've been writing most of the code, so I'm the only one with Tensorflow
-installed on his computer. My colleague and I discuss the results, which I
-send to him via Slack.
-
-## Two: Sharing exploratory models
-That was too slow, so I installed Shiny (an R package) and started running a
-server that hosted an interactive plot that he could use to explore the results.
 
 ![](assets/shiny.png)
 
@@ -80,14 +50,6 @@ server that hosted an interactive plot that he could use to explore the results.
 ## Three: Running statistical model on client's system
 
 ![](assets/windows-server-2012.png)
-
-## Three: Running statistical model on client's system
-
-We recently completed a project where we designed a survey weighting system
-for a client and wrote the code to implement it.
-
-However, until the very end, we didn't know what the client's system looked
-like.
 
 # (If you're a consultant, this happens a lot).
 
@@ -102,8 +64,7 @@ All we knew was:
 
 ## Three: Running statistical model on client's system
 1. Attend a series of meeting with the client's IT team discussing their
-systems and our needs. We needed to install a large number of packages, and we
-needed to install Python, which didn't exist on their servers.
+systems and our needs.
 2. Write a comprehensive test suite that ensured every possible point of
 failure was covered.
 3. Pray.
@@ -119,85 +80,164 @@ failure was covered.
 # If only there was something that could help us...
 
 ## An Ideal solution would be:
-1. Portable. It works, quickly & easily, on every computer.
-2. Easy to configure.
-3. Compatible with production environment.
-4. Works on Windows, OS X, and Linux.
-5. Independent--- can run multiple independently.
-6. Historical--- works forever.
+1. Portable. It works on every computer in the same way.
+2. Easy to set up.
+3. Easy to deploy.
+4. Fast--- as close to running the code natively as possible.
 
 ---
 
 ![Docker logo](assets/docker.png)
 
 ## What is Docker?
-- Allows for the automatic deployment of "containers"
-- Containers are lightweight VMs that wrap up code with everything needed to run
+- Allows for the creation of "containers"
+- Containers are lightweight VMs that wrap up code with everything needed to
+  run it
 - "Write once run everywhere"
 - Easy to write and use
 
+
+# Let's revisit our three stories...
+
 ## One: Moving a nonlinear regression from Excel to Python.
+- After we have the Python script (`nonlinear-regression.py`), add a Dockerfile:
+
+```
+FROM python:3.5.2-slim
+RUN pip install numpy pandas pymssql
+CMD python nonlinear-regression.py
+```
+
+- Time to build from scratch: 1:58.47
+- Time to update Python code and rebuild: 0.629s
+- Size: 648 MB (461.3 MB of that are the packages)
+
 ## Two: Sharing exploratory models
+- Dockerfile:
+
+```
+FROM tensorflow/tensorflow
+
+RUN pip install numpy sklearn pandas
+ADD world_oil_forecast_data.csv /home
+ADD model.py /home
+WORKDIR /home
+CMD python model.py
+```
+
+- Time to build from scratch: 2.55.19
+- Size: 863.2 MB (mostly packages, but some upstream bloat).
+
 ## Three: Running statistical model on client's system
-
-## Docker CLI basics
-
-
-## Using it
-- any containers running?
-`docker ps`
-- run the ubuntu base (change to be more DSey
-`docker run -i -t ubuntu:12.10 bash`
-- tag it
-`docker commit -m "installed redis server"`
-`docker images`
-
-## Expose to SQL Server
-- show bitbucket repo
-- discuss problems we had
-- show how Docker fixes it (should work on non-OS X systems)
-
-
-## Create example api based on speed paramter optimizations
-- create locally, copies file, runs, spits out back
-`docker run --net host -d --name myiris pythoniris  `
-
-- works on Windows
-- API-ify it and deploy to GCE
-
-
-## Example app
-- time it
+- Dockerfile:
 
 ```
-root@precise64:~# docker stop 8222
-root@precise64:~# time docker start 8222
-    real    0m0.150s
+FROM python:3.5.2-slim
 
-root@precise64:~# time service redis-server start
-Starting redis-server: redis-server.
-    real    0m0.165s
-
-root@precise64:~# time docker run -p 6379 -d -i -t jbarratt/redis01 /usr/bin/redis-server
-    real    0m0.147s
+# Install build-essential, git and other dependencies
+RUN pip install numpy pandas sklearn \
+    scipy pymssql hypothesis
+ADD weighting_algorithm.py /home
+ADD test_wa.py /home
+WORKDIR /home
+CMD python test_wa.py
 ```
 
-## Install service manually
+- Time to build from scratch: 2:00.50
+- Size: 681.3 MB (packages are 483.5 MB of that).
 
-## Now, let's automate it
-Sample Dockerfile:
+# Docker basics
+## Dockerfiles:
 
-- Now, edit the code and redploy
+```
+FROM python:3.5.2-slim
 
-- Layering dockerfiles
+RUN pip install numpy pandas sklearn scipy \
+    pymssql hypothesis
+ADD weighting_algorithm.py /home
+ADD test_wa.py /home
+WORKDIR /home
+CMD python test_wa.py
+```
 
-## Competitors
+# Dockerfiles
 
-## Pricing
-- Check out Heroku
+## 1. Base Image:
 
-## Security
-- less stuff on the box, less vectors
-- layering dockerfiles
+`FROM python:3.5.2-slim`
 
-## Links
+
+## 2. Directives:
+
+```
+RUN pip install numpy pandas sklearn scipy pymssql \
+    hypothesis
+ADD weighting_algorithm.py /home
+ADD test_wa.py /home
+WORKDIR /home
+```
+
+## 3. The command:
+
+```
+CMD python test_wa.py
+```
+
+## CLI Basics
+- Once you have a Dockerfile, build a container with
+`docker build -t weighting-algorithm .`
+
+- This builds a container called `weighting-algorithm` from the file named
+  `Dockerfile` sitting in your current folder (works similar to `Make`)
+
+- Once built, run anywhere on your path with
+`docker run weighting-algorithm`
+
+## Example
+- We have a Shiny app (R code that displays images in HTML)
+- Code is in two files: `server.R` and `ui.R`, with three data files (`data.csv`,
+`preds_actuals.csv`, `output.csv`).
+- We run the app with the command `R -e 'shiny::runApp(".", host="0.0.0.0", port=8080)'`
+
+- How can we turn this into a Docker container?
+
+## Example
+
+- Dockerfile:
+
+```
+FROM rocker/shiny
+
+RUN R -e "install.packages(c('ggplot2'))"
+ADD preds_actuals.csv /home
+ADD data.csv /home
+ADD output.csv /home
+ADD server.R /home
+ADD ui.R /home
+WORKDIR /home
+EXPOSE 8080
+CMD R -e \
+    'shiny::runApp(".", host="0.0.0.0", port=8080)'
+```
+
+## Example
+
+- `docker build -t tf-shinyapp`
+- `docker run -p 8080:8080 tf-shinyapp`
+
+## One more thing...
+We can instantly deploy this to Google's Cloud (assuming we
+have a cluster running on Google Container Engine):
+
+```
+gcloud docker push \
+    gcr.io/applied-ridge-137723/tf-shinyapp
+kubectl run tf-shinyapp \
+    --image=gcr.io/applied-ridge-137723/tf-shinyapp \
+    --port=8080
+kubectl expose deployment \
+    tf-shinyapp --type="LoadBalancer"
+kubectl get service tf-shinyapp
+```
+
+## Summary
